# cloud_project

./: README.md  main.py  pyproject.toml
src/: client.py  settings.py
src/routes/: tasks.py  upload.py
src/services/: databricks.py  emr.py  s3.py
