[project]
name = "moproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-sdk>=0.76.0",
    "fastapi[standard]>=0.128.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
